--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,17 @@
 html.bower_components/
-.idea
+*.class
+
+## File-based project format:
+*.iws
+
+## Plugin-specific files:
+
+# IntelliJ
+out/
+.idea/
+
+# mpeltonen/sbt-idea plugin
+.idea_modules/
+
+# JIRA plugin
+atlassian-ide-plugin.xml
